# wordle-helper

./: .gitignore  Cargo.toml  README.md  words-compact.txt  words.txt
src/: filter.rs  main.rs
